--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "my-website",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-spring": "8.0.25",
+    "roughjs": "3.1.0",
+    "styled-components": "4.2.1"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "4.0.0",
+    "eslint-plugin-prettier": "3.0.1",
+    "gh-pages": "2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +38,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://willb335.github.io/my-website"
 }
